--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "current-project",
+  "name": "passport-sso",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,17 +9,21 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^3.0.6",
-    "ejs": "^2.6.2",
+    "bcrypt": "^5.0.1",
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-flash": "0.0.2",
-    "express-session": "^1.16.2",
+    "express-session": "^1.17.2",
     "method-override": "^3.0.0",
-    "passport": "^0.4.0",
+    "passport": "^0.4.1",
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
-    "dotenv": "^8.0.0",
-    "nodemon": "^1.19.1"
+    "@types/bcrypt": "^5.0.0",
+    "@types/express": "^4.17.13",
+    "@types/express-session": "^1.17.4",
+    "@types/passport": "^1.0.7",
+    "dotenv": "^10.0.0",
+    "nodemon": "^2.0.12"
   }
 }
